Fix historical pathology table cell width
Prevent long results eg 'Cancelled due to .....'
expanding the table by truncating long strings
with an ellipsis. You should be able to hover to see
 the entire result

--- a/app/assets/stylesheets/renalware/modules/_pathology.scss
+++ b/app/assets/stylesheets/renalware/modules/_pathology.scss
@@ -37,10 +37,17 @@ table#observations {
 
     td {
       height: 2rem;
-      overflow: visible;
+      overflow: hidden;
       padding: 0 .2rem;
       position: relative;
       text-align: center;
+      text-overflow: ellipsis;
+      max-width: 4rem;
+
+      &.triangle_in_corner {
+        overflow: visible;
+        max-width: unset;
+      }
 
       // Generated with http://triangle.designyourcode.io/
       .triangle-top-right {
